tests/invalid/simple/SetComprehension_CompileFail_1.whiley
void System::main([string] args):
    {int} xs
    {int} zs
    xs = { 1,2,3,4 }
    zs = { x | y ∈ xs }
    print str(xs)
    print str(zs)
